Supabase pooling/direct connection, user list script, .env update

--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://postgres:x5&s!h2bN_xbx3R@db.jazruxvgmlrikmnhysuf.supabase.co:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres.jazruxvgmlrikmnhysuf:zolI54w59K2Tro86@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.jazruxvgmlrikmnhysuf:zolI54w59K2Tro86@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
 JWT_SECRET="my_super_secret_2026_!@#_A8f$kLw9zQpXrT2vB6sN"
