--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,6 @@
 # Environment Variables
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 JWT_SECRET=your_super_secret_jwt_key_change_in_production_12345
-DATABASE_URL="file:./prisma/dev.db"
+DATABASE_URL="postgresql://postgres.jazruxvgmlrikmnhysuf:zolI54w59K2Tro86@aws-1-eu-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.jazruxvgmlrikmnhysuf:zolI54w59K2Tro86@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
 NODE_ENV=development
