--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "bcrypt": "^6.0.0",
+    "googleapis": "^171.4.0",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
     "postgres": "^3.4.8",
